--- a/css.html
+++ b/css.html
@@ -7,10 +7,10 @@
     </head>
 
         <body>
-            <h1>Добро пожаловать на мою страницу!</h1>
+            <h1>Добро пожаловать на мою измененную страницу!</h1>
             <h1>Второй заголовок</h1>
             <p>
-                Привет мир! Это параграф.
+                Привет мир! Это параграф. 
             </p>
             <p>
                Это другой параграф.
